--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,39 +1,18 @@
 @import 'tailwindcss';
 
-@config '../../tailwind.config.js';
-
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-}
-
 html {
-  background-color: #f2f2f2;
+  background-color: #f1ede6;
   font-family: sans-serif;
   height: 100%;
 }
 
 html.dark {
-  background-color: rgb(34, 33, 37);
-  color: #fff;
+  background-color: #282828;
+  color: #EBDBB2;
 }
 
 .dark .nav-links a {
-  color: #fff;
+  color: #EBDBB2;
 }
 
 /* body {
