--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,14 +1,18 @@
 ---
 import '../styles/global.css';
-const { content } = Astro.props;
----
 
+interface Props {
+	title?: string;
+}
+
+const { title = 'My Astro Site' } = Astro.props;
+---
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>{content.title}</title>
+		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
