--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,8 @@
     <nav>
       <ul class="flex gap-4">
         <li><a href="/" class="hover:underline">Home</a></li>
-        <li><a href="/posts" class="hover:underline">Projects</a></li>
+        <li><a href="/posts" class="hover:underline">Proyectos</a></li>
+        <li><a href="/contact" class="hover:underline">Contacto</a></li>
       </ul>
     </nav>
 
