fixed worker name, testing cursive fonts

--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -13,6 +13,10 @@ const { title = 'My Astro Site' } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>{title}</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Tangerine:wght@400;700&family=Birthstone:wght@400;700&family=The+Nautigal:wght@400;700&family=Poiret+One&family=Dongle:wght@300;400;700&family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<slot />
