--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import imageUrlBuilder from '@sanity/image-url';
 import MainLayout from '../layouts/main.astro';
 import Footer from '../components/Footer.astro';
 
+
 const builder = imageUrlBuilder(sanityClient);
 
 function urlFor(source: any) {
@@ -37,15 +38,15 @@ const content = await sanityClient.fetch<SanityDocument>(QUERY);
 const imageProps = content ? generateImageProps(content.cover.asset, '(min-width: 512px) 512px, calc(100vw - 2rem)') : null;
 ---
 <MainLayout title={content?.title}>
-  <main class="flex flex-col font-serif container mx-auto min-h-screen max-w-3xl p-4 md:p-8">
+  <main class="flex flex-col container mx-auto min-h-screen max-w-3xl p-4 md:p-8">
     {content ? (
       <>
-        <h1 class=" text-center text-5xl md:text-6xl font-bold mb-8 ">
-          {content.title}
-        </h1>
-        <h2 class=" text-center text-2xl md:text-2xl font-bold mb-8 ">
-          {content.subtitle}
-        </h2>
+          <h1 class="font-normal text-center text-4xl md:text-5xl mb-8 " style="font-family: 'Birthstone', cursive;">
+            {content.title}
+          </h1>
+          <h2 class="font-normal text-center text-2xl md:text-2xl mb-8 ">
+            {content.subtitle}
+          </h2>
         <div class="max-w-lg mx-auto">
           {imageProps && <img
             src={imageProps.src}
