--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,10 +41,10 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
   <main class="flex flex-col container mx-auto min-h-screen max-w-3xl p-4 md:p-8">
     {content ? (
       <>
-          <h1 class="font-normal text-center text-4xl md:text-5xl mb-8 " style="font-family: 'Birthstone', cursive;">
+          <h1 class="font-bold text-center text-4xl md:text-5xl mb-8 " style="font-family: 'Nanum Myeongjo', serif;">
             {content.title}
           </h1>
-          <h2 class="font-normal text-center text-2xl md:text-2xl mb-8 ">
+          <h2 class="font-normal text-center text-2xl md:text-2xl mb-8 " style="font-family: 'Nanum Myeongjo', serif;">
             {content.subtitle}
           </h2>
         <div class="max-w-lg mx-auto">
