changed fonts corrected sizes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
   <div class="container mx-auto flex justify-between items-center px-4 md:px-8">
     <!-- Navigation Links -->
     <nav>
-      <ul class="flex gap-4">
+      <ul class="flex gap-4 text-3xl md:text-4xl">
         <li><a href="/" class="hover:underline">Home</a></li>
         <li><a href="/posts" class="hover:underline">Proyectos</a></li>
         <li><a href="/contact" class="hover:underline">Contacto</a></li>
