--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -18,7 +18,7 @@ const { title = 'My Astro Site' } = Astro.props;
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Tangerine:wght@400;700&family=Birthstone:wght@400;700&family=The+Nautigal:wght@400;700&family=Poiret+One&family=Dongle:wght@300;400;700&family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
 	</head>
-	<body>
+	<body class="font-Dongle">
 		<slot />
 	</body>
 </html>
