--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -41,19 +41,22 @@ export async function getStaticPaths(): Promise<{ params: { slug: string } }> {
 
 <MainLayout title="Todos mis Proyectos">
   <main class="container mx-auto min-h-screen max-w-3xl p-4 md:p-8 flex flex-col gap-4 bg-white">
-    <a href="/posts" class="text-left hover:underline">&larr; todos los proyectos</a>
+
+    <a href="/posts" class=" text-2xl md:text-2xl text-left hover:underline">&larr; todos los proyectos</a>
+
     <h1 class="text-3xl md:text-4xl font-bold mb-8 text-center">{post.title}</h1>
-    <div class="text-center gap-1">
+
+    <div class="text-center text-2xl md:text-3xl gap-1">
       <p>{new Date(post.publishedAt).getFullYear()}</p>
     </div>
-    <div class="text-center">
+    <div class="text-center text-2xl md:text-2xl">
       {Array.isArray(post.body) && <PortableText value={post.body} />}
     </div>
 
 
     {post.gallery && Array.isArray(post.gallery) && post.gallery.length > 0 && (
       <div class="py-8">
-        <h2 class="text-center text-xl md:text-2xl font-bold mb-4">Photo Gallery</h2>
+        <h2 class="text-center text-3xl md:text-4xl font-bold mb-4">Photo Gallery</h2>
         <div class="  gap-1 grid grid-cols-1 sm:grid-cols-2">
           {post.gallery.map((imageWithAlt: { image: SanityImageSource; alt?: string }) => {
             if (!imageWithAlt.image) return null;
@@ -74,8 +77,8 @@ export async function getStaticPaths(): Promise<{ params: { slug: string } }> {
       </div>
     )}
 
-    <h2 class="text-center text-xl md:text-2xl font-bold ">Créditos</h2>
-    <div class="font-mono">
+    <h2 class="text-center text-3xl md:text-4xl font-bold ">Créditos</h2>
+    <div class="text-xl md:text-2xl">
       {Array.isArray(post.credits) && <PortableText value={post.credits} />}
     </div>
   </main>
