--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,13 +4,13 @@ import Footer from '../components/Footer.astro';
 ---
 <MainLayout title="Contacto">
   <main class="container mx-auto min-h-screen max-w-3xl p-4 md:p-8 flex flex-col items-center">
-    <h1 class="text-center text-4xl md:text-5xl font-bold mb-8">Contáctame</h1>
+    <h1 class="text-center text-4xl md:text-6xl font-bold mb-8">Contáctame</h1>
 
        <!-- Contact Form -->
-    <form class="space-y-6" onsubmit="handleSubmit(event)">
+    <form class="text-3xl md:text-4xl space-y-6" onsubmit="handleSubmit(event)">
       <!-- Name Field -->
       <div>
-        <label for="name" class="block text-sm font-medium mb-2" style="color: #a48374;">
+        <label for="name" class="text-3xl md:text-4xl block font-medium mb-2" style="color: #a48374;">
           Name 
         </label>
         <input
@@ -25,7 +25,7 @@ import Footer from '../components/Footer.astro';
 
       <!-- Email Field -->
       <div>
-        <label for="email" class="block text-sm font-medium mb-2" style="color: #a48374;">
+        <label for="email" class="block text-3xl md:text-4xl font-medium mb-2" style="color: #a48374;">
           Email Address
         </label>
         <input
@@ -40,7 +40,7 @@ import Footer from '../components/Footer.astro';
 
       <!-- Message Field -->
       <div>
-        <label for="message" class="block text-sm font-medium mb-2" style="color: #a48374;">
+        <label for="message" class="block text-3xl md:text-4xl font-medium mb-2" style="color: #a48374;">
           Message
         </label>
         <textarea
