--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const content = await sanityClient.fetch<SanityDocument>(QUERY);
 const imageProps = content ? generateImageProps(content.cover.asset, '(min-width: 512px) 512px, calc(100vw - 2rem)') : null;
 ---
 <MainLayout title={content?.title}>
-  <main class="flex flex-col container mx-auto min-h-screen max-w-3xl p-4 md:p-8">
+  <main class="flex flex-col container font-Dongle mx-auto min-h-screen max-w-3xl p-4 md:p-8">
     {content ? (
       <>
           <h1 class="font-bold text-center text-4xl md:text-5xl mb-8 " style="font-family: 'Nanum Myeongjo', serif;">
@@ -60,14 +60,14 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
         </div>
 
         <div class="mt-6 mb-3">
-          <div class="text-center bg-[#f1ede6] text-[#a48374] rounded-lg p-4">
+          <div class="text-3xl md:text-4xl text-center bg-[#f1ede6] text-[#a48374] rounded-lg p-4">
             <p>
               {content.shortDescription}
             </p>
           </div>
         </div>
         <div class="mt-6 mb-6">
-          <h2 class="text-2xl md:text-3xl font-bold group-hover:underline mt-4 md:mt-0 text-center">Mis Proyectos</h2>
+          <h2 class="text-5xl md:text-6xl font-bold group-hover:underline mt-4 md:mt-0 text-center">Mis Proyectos</h2>
         </div>
 
         <ul class="flex flex-col gap-y-8"> 
@@ -90,13 +90,13 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
                     />
                   </div>
                   <div class="w-full md:w-1/2">
-                    <h2 class="text-2xl font-bold group-hover:underline mt-4 md:mt-0 text-center md:text-left">{post.title}</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold group-hover:underline mt-4 md:mt-0 text-center md:text-left">{post.title}</h2>
                   </div>
                 </a>
               </li>
             )
           })}
-          <a href="/posts" class="w-fit mx-auto bg-[#a48374] text-white rounded-lg px-4 py-2">Todos Mis Proyectos</a>
+          <a href="/posts" class="w-fit mx-auto bg-[#a48374] text-white rounded-lg px-4 py-2 text-3xl md:text-6xl">Todos Mis Proyectos</a>
         </ul>
       </>
     ) : (
