--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,6 +8,7 @@
       <ul class="flex gap-4 text-3xl md:text-4xl">
         <li><a href="/" class="hover:underline">Home</a></li>
         <li><a href="/posts" class="hover:underline">Proyectos</a></li>
+        <li><a href="/assisting" class="hover:underline">Asistente</a></li>
         <li><a href="/contact" class="hover:underline">Contacto</a></li>
       </ul>
     </nav>
