--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import Header from '../components/Header.astro';
 
 interface Props {
 	title?: string;
@@ -19,6 +20,7 @@ const { title = 'My Astro Site' } = Astro.props;
         <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Tangerine:wght@400;700&family=Birthstone:wght@400;700&family=The+Nautigal:wght@400;700&family=Poiret+One&family=Dongle:wght@300;400;700&family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
 	</head>
 	<body class="font-Dongle">
+		<Header />
 		<slot />
 	</body>
 </html>
