--- a/src/pages/assisting.astro
+++ b/src/pages/assisting.astro
@@ -33,9 +33,9 @@ const POSTS_QUERY = `*[_type == "post" && 'Asistente' in tags[]->name]{
 
 const posts = await sanityClient.fetch<SanityDocument[]>(POSTS_QUERY);
 ---
-<MainLayout title="Assisting">
-  <main class="container mx-auto min-h-screen max-w-3xl p-4 md:p-8">
-    <h1 class="text-center text-4xl md:text-5xl font-bold mb-8">Assisting</h1>
+<MainLayout title="Proyectos en los que he colaborado">
+  <main class="container mx-auto min-h-screen max-w-3xl px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8">
+    <h1 class="text-center text-4xl md:text-5xl font-bold mb-8">Proyectos en los que he colaborado</h1>
 
     <!-- Posts Gallery -->
     <ul id="post-gallery" class="grid grid-cols-1 md:grid-cols-3 gap-3">
