--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import MainLayout from '../layouts/main.astro';
 import Footer from '../components/Footer.astro';
 ---
 <MainLayout title="Contacto">
-  <main class="container mx-auto min-h-screen max-w-3xl p-4 md:p-8 flex flex-col items-center">
+  <main class="container mx-auto min-h-screen max-w-3xl px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col items-center">
     <h1 class="text-center text-4xl md:text-6xl font-bold mb-8">Contáctame</h1>
 
        <!-- Contact Form -->
