--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,11 @@
 ---
 // No props needed for this static footer
 ---
-<footer class="bg-[#a48374] text-[#f1ede6] py-8 mt-16">
+<footer class="bg-[#a48374] text-[#f1ede6] py-8 mt-8">
   <div class="container mx-auto flex flex-col md:flex-row justify-center md:justify-between items-center px-4 md:px-8 gap-4">
     <!-- Navigation Links -->
     <nav>
-      <ul class="flex gap-4 text-3xl md:text-4xl">
+      <ul class="flex gap-4 text-xl md:text-xl">
         <li><a href="/" class="hover:underline">Home</a></li>
         <li><a href="/posts" class="hover:underline">Proyectos</a></li>
         <li><a href="/assisting" class="hover:underline">Asistente</a></li>
