--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -53,38 +53,39 @@ const backLinkText = hasAssistingTag ? 'Todas mis colaboraciones' : 'Todos mis p
 
 <MainLayout title={post.title}>
   <main class="container mx-auto min-h-screen max-w-3xl px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col gap-4 bg-white">
-    <a href={backLinkUrl} class=" text-2xl md:text-2xl text-left hover:underline">&larr;{backLinkText}</a>
-    <h1 class="text-3xl md:text-4xl font-bold mb-8 text-center">{post.title}</h1>
+    <a href={backLinkUrl} class=" text-xl md:text-base text-left hover:underline">&larr;{backLinkText}</a>
+    <h1 class="text-4xl md:text-5xl font-bold mb-8 text-center">{post.title}</h1>
     <div class="text-center text-2xl md:text-3xl gap-1">
       <p>{new Date(post.publishedAt).getFullYear()}</p>
     </div>
-    <div class="text-center text-2xl md:text-2xl">
+    <div class="text-center text-xl md:text-2xl">
       {Array.isArray(post.body) && <PortableText value={post.body} />}
     </div>
     {post.gallery && Array.isArray(post.gallery) && post.gallery.length > 0 && (
       <div class="py-8">
-        <h2 class="text-center text-3xl md:text-4xl font-bold mb-4">Photo Gallery</h2>
-        <div class="  gap-1 grid grid-cols-1 sm:grid-cols-2">
-          {post.gallery.map((imageWithAlt: { image: SanityImageSource; alt?: string }) => {
-            if (!imageWithAlt.image) return null;
-            const imageProps = generateImageProps(imageWithAlt.image);
-            return (
-              <img
-                src={imageProps.src}
-                srcset={imageProps.srcset}
-                sizes={imageProps.sizes}
-                alt={imageWithAlt.alt || ""}
-                class=" w-full h-auto"
-                loading="lazy"
-                decoding="async"
-              />
-            );
-          })}
-        </div>
-      </div>
-    )}
-    <h2 class="text-center text-3xl md:text-4xl font-bold ">Créditos</h2>
-    <div class="text-xl md:text-2xl">
+                <h2 class="text-center text-2xl md:text-3xl font-bold mb-4">Photo Gallery</h2>
+                <div class="  gap-1 grid grid-cols-1 sm:grid-cols-2">
+                  {post.gallery.map((imageWithAlt: { image: SanityImageSource; alt?: string }) => {
+                    if (!imageWithAlt.image) return null;
+                    const imageProps = generateImageProps(imageWithAlt.image);
+                    return (
+                      <img
+                        src={imageProps.src}
+                        srcset={imageProps.srcset}
+                        sizes={imageProps.sizes}
+                        alt={imageWithAlt.alt || ""}
+                        class=" w-full h-auto"
+                        loading="lazy"
+                        decoding="async"
+                      />
+                    );
+                  })}
+                </div>
+              </div>
+            )}
+        
+            <h2 class="text-center text-2xl md:text-3xl font-bold ">Créditos</h2>
+    <div class="text-base md:text-xl">
       {Array.isArray(post.credits) && <PortableText value={post.credits} />}
     </div>
   </main>
