--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,21 +53,21 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
             srcset={imageProps.srcset}
             sizes={imageProps.sizes}
             alt={content.title || ""} 
-            class="w-full aspect-square object-cover rounded-lg overflow-hidden shadow-lg" 
+            class="w-full aspect-auto object-cover rounded-lg overflow-hidden shadow-lg" 
             loading="lazy"
             decoding="async"
           />}
         </div>
 
         <div class="mt-6 mb-3">
-          <div class="text-3xl md:text-4xl text-center bg-[#f1ede6] text-[#a48374] rounded-lg p-4">
+          <div class="text-xl md:text-2xl text-center bg-[#f1ede6] text-[#a48374] rounded-lg p-4">
             <p>
               {content.shortDescription}
             </p>
           </div>
         </div>
         <div class="mt-6 mb-6">
-          <h2 class="text-5xl md:text-6xl font-bold group-hover:underline mt-4 md:mt-0 text-center">Mis Proyectos</h2>
+          <h2 class="text-3xl md:text-4xl group-hover:underline mt-4 md:mt-0 text-center" style="font-family: 'Nanum Myeongjo', serif;">Mis Proyectos</h2>
         </div>
 
         <ul class="flex flex-col gap-y-8"> 
@@ -90,13 +90,13 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
                     />
                   </div>
                   <div class="w-full md:w-1/2">
-                    <h2 class="text-3xl md:text-4xl font-bold group-hover:underline mt-4 md:mt-0 text-center md:text-left">{post.title}</h2>
+                    <h2 class="text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 text-center md:text-left">{post.title}</h2>
                   </div>
                 </a>
               </li>
             )
           })}
-          <a href="/posts" class="w-fit mx-auto bg-[#a48374] text-white rounded-lg px-4 py-2 text-3xl md:text-6xl">Todos Mis Proyectos</a>
+          <a href="/posts" class="w-fit mx-auto bg-[#a48374] text-white rounded-lg px-4 py-2 text-xl md:text-3xl">Todos Mis Proyectos</a>
         </ul>
       </>
     ) : (
