only name has fancy font, fixed header and footer home->inicio and expanded contents for big screen in index

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
     <!-- Navigation Links -->
     <nav>
       <ul class="flex gap-4 text-xl md:text-xl">
-        <li><a href="/" class="hover:underline">Home</a></li>
+        <li><a href="/" class="hover:underline">Inicio</a></li>
         <li><a href="/posts" class="hover:underline">Proyectos</a></li>
         <li><a href="/assisting" class="hover:underline">Asistente</a></li>
         <li><a href="/contact" class="hover:underline">Contacto</a></li>
