--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,9 @@
     </div>
 
     <!-- Navigation Links -->
-    <nav class="flex-grow">
+    <nav class="grow">
       <ul class="flex justify-center gap-4 md:gap-12 md:text-xl">
-        <li><a href="/" class="hover:underline">Home</a></li>
+        <li><a href="/" class="hover:underline">Inicio</a></li>
         <li><a href="/posts" class="hover:underline">Proyectos</a></li>
         <li><a href="/assisting" class="hover:underline">Asistente</a></li>
         <li><a href="/contact" class="hover:underline">Contacto</a></li>
