fixed responsiveness for bigger screens

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -54,7 +54,7 @@ const backLinkText = hasAssistingTag ? 'Todas mis colaboraciones' : 'Todos mis p
 ---
 
 <MainLayout title={post.title}>
-  <main class="container mx-auto min-h-screen max-w-3xl px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col gap-4 bg-white">
+  <main class="container mx-auto min-h-screen px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col gap-4 bg-white">
     <a href={backLinkUrl} class=" text-xl md:text-base text-left hover:underline">&larr;{backLinkText}</a>
     <h1 class="text-4xl md:text-5xl font-bold mb-8 text-center">{post.title}</h1>
     <div class="text-center text-2xl md:text-3xl gap-1">
