--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -39,13 +39,14 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
 import ContactForm from '../components/ContactForm.jsx';
 ---
 <MainLayout title="Contacto">
-  <main class="container mx-auto min-h-screen max-w-3xl px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col items-center">
+  <main class="container mx-auto min-h-screen px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col items-center">
     <h1 class="text-center text-4xl md:text-5xl font-bold mb-8">Contáctame</h1>
 
-    <!-- Interactive React Contact Form -->
-    <ContactForm client:load />
+    <div class="md:flex-row">
+      <!-- Interactive React Contact Form -->
+      <ContactForm client:load />
 
-       <!-- Picture Frame -->
+      <!-- Picture Frame -->
         <div class="mt-4 max-w-lg mx-auto">
           {imageProps && <img
             src={imageProps.src}
@@ -57,6 +58,7 @@ import ContactForm from '../components/ContactForm.jsx';
             decoding="async"
           />}
         </div>
+    <div>
 
   </main>
 </MainLayout>
