--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ function generateImageProps(image: any, sizes: string) {
   const base = urlFor(image).quality(90).auto('format');
   return {
     src: base.width(800).url(),
-    srcset: [400, 800, 1200]
+    srcset: [400, 800, 1200, 1600, 2000]
       .map(w => `${base.width(w).url()} ${w}w`)
       .join(', '),
     sizes: sizes,
@@ -75,15 +75,15 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
           <h2 class="text-3xl md:text-4xl group-hover:underline mt-4 md:mt-0 text-center">Mis Proyectos</h2>
         </div>
 
-        <ul class="flex flex-col gap-y-8"> 
+        <ul class="flex flex-col gap-y-4"> 
           {content.topProjects.map((post, index) => {
-            const imageProps = generateImageProps(post.cover.image, '(min-width: 768px) 352px, calc(100vw - 2rem)');
+            const imageProps = generateImageProps(post.cover.image, '(min-width: 768px) 250px, calc(100vw - 2rem)');
             return (
               <li class="group">
                 <a href={`/${post.slug.current}`} 
                   class={`flex flex-col md:flex-row items-center gap-2 ${index % 2 === 1 ? 'md:flex-row-reverse' : ''}`}
                 >
-                  <div class="w-full md:w-1/4 md:items-center">
+                  <div class="w-full md:w-1/3">
                     <img
                       src={imageProps.src}
                       srcset={imageProps.srcset}
@@ -94,8 +94,8 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
                       decoding="async"
                     />
                   </div>
-                  <div class="w-full md:w-1/2">
-                    <h2 class="text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1 text-center md:text-left">{post.title}</h2>
+                  <div class="w-full md:w-2/3">
+                    <h2 class="text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1 ${index % 2 === 1 ? 'text-center md:text-left' : 'text-center md:text-right'}">{post.title}</h2>
                   </div>
                 </a>
               </li>
