--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,20 +1,20 @@
 ---
-// No props needed for this static header
+import Button from './Button.astro';
 ---
-<header class="bg-[#a48374] text-[#f1ede6] py-1">
+<header class="bg-[#220d0c] text-[#d6c8bd] py-1">
   <div class="container mx-auto flex items-center px-2 md:px-2">
     <!-- "Sara Delgado" text - hidden on mobile, block on desktop -->
-    <div class="hidden md:block text-xl font-bold">
+    <div class="hidden md:block text-2xl font-bold">
       <a href="/" class="hover:underline">Sara Delgado</a>
     </div>
 
     <!-- Navigation Links -->
     <nav class="grow">
-      <ul class="flex justify-center gap-4 md:gap-12 md:text-xl">
+      <ul class="flex justify-center gap-4 md:gap-12 md:text-xl items-center">
         <li><a href="/" class="hover:underline">Inicio</a></li>
         <li><a href="/posts" class="hover:underline">Proyectos</a></li>
         <li><a href="/assisting" class="hover:underline">Asistente</a></li>
-        <li><a href="/contact" class="hover:underline">Contacto</a></li>
+        <li><Button href="/contact">Contáctame</Button></li>
       </ul>
     </nav>
 
