--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,10 +43,10 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
   <main class="flex flex-col container mx-auto min-h-screen  px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8">
     {content ? (
       <>
-          <h1 class="font-bold text-center text-4xl md:text-5xl mb-8 " style="font-family: 'Nanum Myeongjo', serif;">
+          <h1 class=" text-[#541409] font-bold text-center text-4xl md:text-5xl mb-8 " style="font-family: 'Nanum Myeongjo', serif;">
             {content.title}
           </h1>
-          <h2 class="font-normal text-center text-2xl md:text-2xl mb-8 ">
+          <h2 class="text-[#541409] opacity-60 text-center text-2xl md:text-2xl mb-8 ">
             {content.subtitle}
           </h2>
 
@@ -57,22 +57,22 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
                 srcset={imageProps.srcset}
                 sizes={imageProps.sizes}
                 alt={content.title || ""} 
-                class="w-full aspect-auto object-cover rounded-lg overflow-hidden shadow-lg" 
+                class="w-full aspect-auto object-cover overflow-hidden shadow-lg" 
                 loading="lazy"
                 decoding="async"
               />}
             </div>
 
             <div class="w-full md:w-1/2 mt-6 mb-3 md:mt-0 md:mb-0">
-              <div class="text-xl md:text-2xl md:ml-4 text-center bg-[#f1ede6] text-[#a48374] rounded-lg p-4">
+              <div class="text-xl md:text-2xl md:ml-4 text-center text-[#220d0c] rounded-lg p-4">
                 <p>
                   {content.shortDescription}
                 </p>
               </div>
             </div>
         </div>
-        <div class="mt-6 mb-6">
-          <h2 class="text-3xl md:text-4xl group-hover:underline mt-4 md:mt-0 text-center">Mis Proyectos</h2>
+        <div class="mx-auto w-full md:w-1/3 md:mt-40 md:mb-10 mt-6 mb-6">
+          <h2 class="text-3xl md:text-4xl mt-3 mb-2 md:mt-0 text-center text-[#541409] font-bold">Proyectos Destacados</h2>
         </div>
 
         <ul class="flex flex-col gap-y-4"> 
@@ -89,19 +89,26 @@ const imageProps = content ? generateImageProps(content.cover.asset, '(min-width
                       srcset={imageProps.srcset}
                       sizes={imageProps.sizes}
                       alt={post.cover.alt || post.title || ""}
-                      class="w-full aspect-square object-cover rounded-lg shadow-lg overflow-hidden"
+                      class="w-full aspect-square object-cover shadow-lg overflow-hidden"
                       loading="lazy"
                       decoding="async"
                     />
                   </div>
-                  <div class="w-full md:w-2/3">
-                    <h2 class="text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1 ${index % 2 === 1 ? 'text-center md:text-left' : 'text-center md:text-right'}">{post.title}</h2>
+                  <div
+                    class:list={[
+                      "w-full",
+                      "md:w-2/3",
+                      "text-center",
+                      index % 2 === 1 ? "md:mr-6 md:text-right" : "md:ml-6 md:text-left",
+                    ]}
+                  >
+                    <h2 class="text-[#220d0c] text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1">{post.title}</h2>
                   </div>
                 </a>
               </li>
             )
           })}
-          <a href="/posts" class="w-fit mx-auto bg-[#a48374] text-white rounded-lg px-4 py-2 text-xl md:text-3xl">Todos Mis Proyectos</a>
+          <a href="/posts" class="w-fit mx-auto bg-[#220d0c] text-white rounded-lg px-4 py-2 text-xl md:text-3xl">Todos Mis Proyectos</a>
         </ul>
       </>
     ) : (
