query is now ordered by published date descending in /posts

--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -25,7 +25,9 @@ function generateImageProps(image: any, sizes: string) {
   };
 }
 
-const POSTS_QUERY = `*[_type == "post" && !('Asistente' in tags[]->name)]{
+const POSTS_QUERY = `*[_type == "post" && !('Asistente' in tags[]->name)] | 
+order(publishedAt desc) |
+{
   _id,
   title,
   slug,
